# defectvision

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
defectvision/: datasets_anomaly.py  export_onnx.py  export_tensorrt.py  gradcam.py  infer.py  infer_anomaly.py  infer_seg.py  infer_tensorrt.py  infer_yolo.py  logger.py  predict_dir.py  server.py  train.py  train_anomaly.py  train_seg.py  train_yolo.py  utils.py  video_stream.py  video_yolo.py
defectvision/data/: generate_multiclass.py  generate_segmentation.py  generate_synth_defects.py
defectvision/models/: __init__.py  unet.py
tests/: __init__.py  test_model.py
vision_ai/: datasets.py  datasets_seg.py  export_onnx.py  export_tensorrt.py  gradcam.py  infer.py  infer_anomaly.py  infer_seg.py  infer_tensorrt.py  infer_yolo.py  logger.py  model.py  predict_dir.py  server.py  train.py  train_anomaly.py  train_seg.py  train_yolo.py  video_stream.py  video_yolo.py
vision_ai/data/: generate_detection.py  generate_synth_defects.py
vision_ai/models/: __init__.py  autoencoder.py
